Init project with navbar/logo

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 
   </header>
   <nav class="navbar navbar-expand-md navbar-light bg-light">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="index.html">
       <img class="logo" src="img/OC-logo.png" alt="OC Vacation Home logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -25,11 +25,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home</a>
-        </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Gallery</a>
@@ -49,7 +49,12 @@
       </ul>
     </div>
   </nav>
-  <h1></h1>
+  <h2>Amenities</h2>
+  <div class="container"></div>
+  <div></div>
+  <div></div>
+  <h2>Floorplan</h2>
+  <h2>Map</h2>
 
   <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
   <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
