Added img/button and info to home page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed&display=swap" rel="stylesheet">
   <title>OC Vacation Home</title>
 </head>
 
@@ -17,7 +20,7 @@
   </header>
   <nav class="navbar navbar-expand-md navbar-light bg-light">
     <a class="navbar-brand" href="#">
-      <img class="logo" src="img/OC-logo.png" alt="OC Vacation Home logo">
+      <img class="logo img-thumbnail" src="img/OC-logo.png" alt="OC Vacation Home logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +52,31 @@
       </ul>
     </div>
   </nav>
-  <h1></h1>
+
+  <div class="card bg-dark text-white">
+    <img src="img/newport-beach.jpg" class="img-fluid" id="newport-image" alt="Newport Beach">
+    <div class="card-img-overlay">
+      <h1 class="card-title">Welcome to OC</h1>
+      <div class="container">
+        <div class="row row-content">
+          <div class="col-12 text-center">
+            <a class="btn btn-primary align-self-center" href="#" role="button">Check Availability</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="p-3 mb-2 bg-info text-white">
+    <h2>Enjoy the California sun</h2>
+    <p>OC Vacation Home is located in Garden Grove, California. Enjoy great sunset
+      views from your window and a view of
+      Disneyland fireworks from the balcony. The space includes 2 bedrooms and 2 bathrooms. The property has luxury
+      vinyl plank laminated wood flooring, complemented with soft blue wall colors and linen white ceiling and
+      baseboards. The kitchen was upgraded to include a Farmhouse single basin sink, gleaming quartz countertops and
+      stainless steel appliances. You will also be able to enjoy the community amenities of a clubhouse, fully-equipped
+      fitness center, pool, spa, and barbecue areas.</p>
+  </div>
 
   <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
   <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
