Added More Cards/Images to Gallery Page

--- a/gallery.html
+++ b/gallery.html
@@ -69,22 +69,22 @@
   <div class="container">
     <div class="row row-content">
       <div class="card-deck">
-        <div class="card">
+        <div class="card mt-2">
           <img class="card-img-top" src="img/condo-imgs/adventure.jpg" alt="Adventure is calling.">
           <div class="card-body">
-            <h5 class="card-title">Adventure is Calling</h5>
+            <h5 class="card-title text-center">Adventure is Calling</h5>
           </div>
         </div>
-        <div class="card">
+        <div class="card mt-2">
           <img class="card-img-top" src="img/condo-imgs/living-room.jpg" alt="Living room">
           <div class="card-body">
-            <h5 class="card-title">Living Room</h5>
+            <h5 class="card-title text-center">Living Room</h5>
           </div>
         </div>
-        <div class="card">
+        <div class="card mt-2">
           <img class="card-img-top" src="img/condo-imgs/Iiving-area.jpg" alt="Living area">
           <div class="card-body">
-            <h5 class="card-title">Living Area</h5>
+            <h5 class="card-title text-center">Living Area</h5>
           </div>
         </div>
       </div>
@@ -92,22 +92,22 @@
 
     <div class="row row-content">
       <div class="card-deck">
-        <div class="card">
+        <div class="card mt-2">
           <img class="card-img-top" src="img/condo-imgs/dining-room-2.jpg" alt="Dining room">
           <div class="card-body">
-            <h5 class="card-title">Dining Room/Living Room</h5>
+            <h5 class="card-title text-center">Dining Room/Living Room</h5>
           </div>
         </div>
-        <div class="card">
+        <div class="card mt-2">
           <img class="card-img-top" src="img/condo-imgs/dining-room.jpg" alt="Dining room">
           <div class="card-body">
-            <h5 class="card-title">Dining Room</h5>
+            <h5 class="card-title text-center">Dining Room</h5>
           </div>
         </div>
-        <div class="card">
+        <div class="card mt-2">
           <img class="card-img-top" src="img/condo-imgs/kitchen-1.jpg" alt="Kitchen">
           <div class="card-body">
-            <h5 class="card-title">Kitchen</h5>
+            <h5 class="card-title text-center">Kitchen</h5>
           </div>
         </div>
       </div>
@@ -115,22 +115,22 @@
 
     <div class="row row-content">
       <div class="card-deck">
-        <div class="card">
+        <div class="card mt-2">
           <img class="card-img-top" src="img/condo-imgs/kitchen-2.jpg" alt="Kitchen with gas stove">
           <div class="card-body">
-            <h5 class="card-title">Kitchen with Gas Stove/Oven</h5>
+            <h5 class="card-title text-center">Kitchen with Gas Stove/Oven</h5>
           </div>
         </div>
-        <div class="card">
+        <div class="card mt-2">
           <img class="card-img-top" src="img/condo-imgs/hallway.jpg" alt="Hallway to bedrooms to bathrooms">
           <div class="card-body">
-            <h5 class="card-title">Hallway to Bedrooms/Bathrooms</h5>
+            <h5 class="card-title text-center">Hallway to Bedrooms/Bathrooms</h5>
           </div>
         </div>
-        <div class="card">
+        <div class="card mt-2">
           <img class="card-img-top" src="img/condo-imgs/washer-dryer.jpg" alt="Washer and dryer">
           <div class="card-body">
-            <h5 class="card-title">Washer and Dryer</h5>
+            <h5 class="card-title text-center">Washer and Dryer</h5>
           </div>
         </div>
       </div>
@@ -138,22 +138,117 @@
 
     <div class="row row-content">
       <div class="card-deck">
-        <div class="card">
-          <img class="card-img-top" src="img/condo-imgs/master-bedroom-3.jpg" alt="Master bedroom">
-          <div class="card-body">
-            <h5 class="card-title">Master Bedroom</h5>
-          </div>
-        </div>
-        <div class="card">
+        <div class="card mt-2">
           <img class="card-img-top" src="img/condo-imgs/master-bedroom-1.jpg" alt="Master bedroom with king bed">
           <div class="card-body">
-            <h5 class="card-title">Master Bedroom with a King Bed</h5>
+            <h5 class="card-title text-center">Master Bedroom with a King Bed</h5>
           </div>
         </div>
-        <div class="card">
+        <div class="card mt-2">
+          <img class="card-img-top" src="img/condo-imgs/master-bedroom-2.jpg"
+            alt="Master bedroom hallway to closet and bathroom">
+          <div class="card-body">
+            <h5 class="card-title text-center">Master Bedroom Hallway to Closet and Bathroom</h5>
+          </div>
+        </div>
+        <div class="card mt-2">
           <img class="card-img-top" src="img/condo-imgs/master-closet-1.jpg" alt="Walk-in closet in master bedroom">
           <div class="card-body">
-            <h5 class="card-title">Walk-in Closet in Master Bedroom</h5>
+            <h5 class="card-title text-center">Walk-in Closet in Master Bedroom</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row row-content">
+      <div class="card-deck">
+        <div class="card mt-2">
+          <img class="card-img-top" src="img/condo-imgs/master-bathroom-4.jpg" alt="Full bathroom in master bedroom">
+          <div class="card-body">
+            <h5 class="card-title text-center">Full Bathroom in Master Bedroom</h5>
+          </div>
+        </div>
+        <div class="card mt-2">
+          <img class="card-img-top" src="img/condo-imgs/master-bathroom-2.jpg" alt="Full bathroom in master bedroom">
+          <div class="card-body">
+            <h5 class="card-title text-center">Full Bathroom in Master Bedroom</h5>
+          </div>
+        </div>
+        <div class="card mt-2">
+          <img class="card-img-top" src="img/condo-imgs/master-bathtub.jpg" alt="Bath in master bedroom">
+          <div class="card-body">
+            <h5 class="card-title text-center">Full bathroom in Master Bedroom</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row row-content">
+      <div class="card-deck">
+        <div class="card mt-2">
+          <img class="card-img-top" src="img/condo-imgs/second-bedroom-4.jpg" alt="Second bedroom">
+          <div class="card-body">
+            <h5 class="card-title text-center">Second Bedroom</h5>
+          </div>
+        </div>
+        <div class="card mt-2">
+          <img class="card-img-top" src="img/condo-imgs/second-bedroom-3.jpg"
+            alt="Second bedroom with full bed and twin trundle">
+          <div class="card-body">
+            <h5 class="card-title text-center">Second Bedroom with a Full Bed and Twin Trundle</h5>
+          </div>
+        </div>
+        <div class="card mt-2">
+          <img class="card-img-top" src="img/condo-imgs/second-bedroom-2.jpg"
+            alt="Second bedroom closet/hallway to bathroom">
+          <div class="card-body">
+            <h5 class="card-title text-center">Closet in Second Bedroom</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row row-content">
+      <div class="card-deck">
+        <div class="card mt-2">
+          <img class="card-img-top" src="img/condo-imgs/second-bathroom-2.jpg" alt="Second bathroom">
+          <div class="card-body">
+            <h5 class="card-title text-center">Second Bathroom</h5>
+          </div>
+        </div>
+        <div class="card mt-2">
+          <img class="card-img-top" src="img/condo-imgs/second-bathroom-1.jpg" alt="Second full bathroom">
+          <div class="card-body">
+            <h5 class="card-title text-center">Second Full Bathroom</h5>
+          </div>
+        </div>
+        <div class="card mt-2">
+          <img class="card-img-top" src="img/condo-imgs/balcony-1.jpg" alt="Balcony">
+          <div class="card-body">
+            <h5 class="card-title text-center">Balcony</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row row-content">
+      <div class="card-deck">
+        <div class="card mt-2">
+          <img class="card-img-top" src="img/amenities-imgs/pool-1.jpeg" alt="Pool and spa">
+          <div class="card-body">
+            <h5 class="card-title text-center">Pool/Spa</h5>
+          </div>
+        </div>
+        <div class="card mt-2">
+          <img class="card-img-top" src="img/amenities-imgs/fitness-center-1.jpeg" alt="Fitness center">
+          <div class="card-body">
+            <h5 class="card-title text-center">Fitness Center</h5>
+          </div>
+        </div>
+        <div class="card mt-2">
+          <img class="card-img-top" src="img/amenities-imgs/courtyard-1.jpeg" alt="Courtyard">
+          <div class="card-body">
+            <h5 class="card-title text-center">Courtyard</h5>
           </div>
         </div>
       </div>
