Added contact form, map, created all other pages

--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,7 @@
 
   <nav class="navbar navbar-expand-md navbar-light bg-light">
     <div class="container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="index.html">
         <img class="logo img-thumbnail" src="img/OC-logo.png" alt="OC Vacation Home logo">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -28,26 +28,26 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item ">
             <a class="nav-link" href="overview.html">Overview</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="#">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Availability</a>
+            <a class="nav-link" href="availability.html">Availability</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Things to Do</a>
+            <a class="nav-link" href="things-to-do.html">Things to Do</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Reviews</a>
+            <a class="nav-link" href="reviews.html">Reviews</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -56,8 +56,8 @@
 
   <div class="col">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-      <li class="breadcrumb-item"><a href="gallery.html">Gallery</a></li>
+      <li class="breadcrumb-item"><a class="text-info" href="index.html">Home</a></li>
+      <li class="breadcrumb-item"><a class="text-info" href="gallery.html">Gallery</a></li>
     </ol>
   </div>
   <header>
@@ -266,9 +266,10 @@
       </div>
       <div class="row">
         <div class="col-12 text-center">
-          <a role="button" class="btn btn-link" href="tel:#"><i class="fa fa-phone"></i>
+          <a role="button" class="btn btn-link text-info" href="tel:#"><i class="fa fa-phone"></i>
             1-888-888-8888</a><br />
-          <a role="button" class="btn btn-link" href="mailto:manalhz@gmail.com"><i class="fa fa-envelope-o"></i>
+          <a role="button" class="btn btn-link text-info" href="mailto:manalhz@gmail.com"><i
+              class="fa fa-envelope-o"></i>
             manalhz@gmail.com</a>
         </div>
       </div>
