--- a/index.html
+++ b/index.html
@@ -16,10 +16,6 @@
 </head>
 
 <body>
-  <header class>
-
-  </header>
-
   <nav class="navbar navbar-expand-md navbar-light bg-light">
     <div class="container">
       <a class="navbar-brand" href="#">
@@ -34,23 +30,23 @@
           <li class="nav-item active">
             <a class="nav-link" href="#">Home</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item ">
             <a class="nav-link" href="overview.html">Overview</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Availability</a>
+            <a class="nav-link" href="availability.html">Availability</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Things to Do</a>
+            <a class="nav-link" href="things-to-do.html">Things to Do</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Reviews</a>
+            <a class="nav-link" href="reviews.html">Reviews</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -65,7 +61,7 @@
       <div class="container">
         <div class="row row-content">
           <div class="col-12 text-center">
-            <a class="btn btn-primary align-self-center" href="#" role="button">Check Availability</a>
+            <a class="btn btn-info align-self-center" href="availability.html" role="button">Check Availability</a>
           </div>
         </div>
       </div>
@@ -95,9 +91,10 @@
       </div>
       <div class="row">
         <div class="col-12 text-center">
-          <a role="button" class="btn btn-link" href="tel:#"><i class="fa fa-phone"></i>
+          <a role="button" class="btn btn-link text-info" href="tel:#"><i class="fa fa-phone"></i>
             1-888-888-8888</a><br />
-          <a role="button" class="btn btn-link" href="mailto:manalhz@gmail.com"><i class="fa fa-envelope-o"></i>
+          <a role="button" class="btn btn-link text-info" href="mailto:manalhz@gmail.com"><i
+              class="fa fa-envelope-o"></i>
             manalhz@gmail.com</a>
         </div>
       </div>
