--- a/things-to-do.html
+++ b/things-to-do.html
@@ -27,11 +27,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">Overview</a>
+            <a class="nav-link" href="index.html">Home</a>
+          <li class="nav-item ">
+            <a class="nav-link" href="overview.html">Overview</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="gallery.html">Gallery</a>
@@ -39,8 +38,8 @@
           <li class="nav-item">
             <a class="nav-link" href="availability.html">Availability</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="things-to-do.html">Things to Do</a>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Things to Do</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="reviews.html">Reviews</a>
@@ -56,81 +55,10 @@
   <div class="col">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a class="text-info" href="index.html">Home</a></li>
-      <li class="breadcrumb-item"><a class="text-info" href="overview.html">Overview</a></li>
+      <li class="breadcrumb-item"><a class="text-info" href="things-to-do.html">Things to Do</a></li>
     </ol>
   </div>
 
-  <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-    <li class="nav-item">
-      <a class="nav-link text-info" href="#amenities" aria-selected="true">Amenities</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link text-info" href="#floorplan" aria-selected="false">Floorplan</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link text-info" href="#map" aria-selected="false">Map</a>
-    </li>
-  </ul>
-
-  <div class="container">
-    <h2 id="amenities">Amenities</h2>
-    <div class="row row-content">
-      <div class="card-group">
-        <div class="card border-info mb-3">
-          <img class="card-img-top" src="img/amenities-imgs/fitness-center-1.jpeg" alt="Fitness Center">
-          <div class="card-body">
-            <h3 class="card-title">Fitness Center</h5>
-              <p class="card-text">Enjoy a workout in a fully-equipped fitness center, with a view of the pool.</p>
-          </div>
-        </div>
-
-        <div class="card border-info mb-3">
-          <img class="card-img-top" src="img/amenities-imgs/pool-1.jpeg" alt="Pool">
-          <div class="card-body">
-            <h3 class="card-title">Pool and Spa</h3>
-            <p class="card-text">Take a swim or relax in the jacuzzi.</p>
-          </div>
-        </div>
-
-        <div class="card border-info mb-3">
-          <img class="card-img-top" src="img/amenities-imgs/courtyard-1.jpeg" alt="Courtyard">
-          <div class="card-body">
-            <h3 class="card-title">Courtyard</h3>
-            <p class="card-text">Take a walk in the beautiful courtyard.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <h4>Other Amenities</h4>
-    <ul class="list-group border-info mb-3">
-      <li class="list-group-item">Washer/Dryer</li>
-      <li class="list-group-item">TV in all rooms</li>
-      <li class="list-group-item">Air conditioning</li>
-      <li class="list-group-item">Wifi</li>
-      <li class="list-group-item">BBQ grill</li>
-      <li class="list-group-item">Smart lock</li>
-      <li class="list-group-item">Free garage parking on premises</li>
-      <li class="list-group-item">Smoke/carbon monoxide alarm</li>
-    </ul>
-  </div>
-
-  <h2 id="floorplan">Floorplan</h2>
-
-  <div class="container">
-    <h2 id="map">Map</h2>
-    <div class="row row-content">
-      <div class="col-12">
-        <div class="mapouter">
-          <div class="embed-responsive embed-responsive-16by9 gmap_canvas"><iframe class="embed-responsive-item"
-              id="gmap_canvas"
-              src="https://maps.google.com/maps?q=Chapman%20Commons&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
-              scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://fmovies-online.net"></a><br>
-            <a href="https://www.embedgooglemap.net">embedgooglemap.net</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
   <footer class="site-footer">
     <div class="container">
       <div class="row">
@@ -157,6 +85,7 @@
       </div>
     </div>
   </footer>
+
   <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
   <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
