--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,8 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Overview</a>
+          <li class="nav-item">
+            <a class="nav-link" href="overview.html">Overview</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="gallery.html">Gallery</a>
@@ -45,7 +45,7 @@
           <li class="nav-item">
             <a class="nav-link" href="reviews.html">Reviews</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="#">Contact</a>
           </li>
         </ul>
@@ -56,81 +56,85 @@
   <div class="col">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a class="text-info" href="index.html">Home</a></li>
-      <li class="breadcrumb-item"><a class="text-info" href="overview.html">Overview</a></li>
+      <li class="breadcrumb-item"><a class="text-info" href="contact.html">Contact</a></li>
     </ol>
   </div>
-
-  <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-    <li class="nav-item">
-      <a class="nav-link text-info" href="#amenities" aria-selected="true">Amenities</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link text-info" href="#floorplan" aria-selected="false">Floorplan</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link text-info" href="#map" aria-selected="false">Map</a>
-    </li>
-  </ul>
-
   <div class="container">
-    <h2 id="amenities">Amenities</h2>
-    <div class="row row-content">
-      <div class="card-group">
-        <div class="card border-info mb-3">
-          <img class="card-img-top" src="img/amenities-imgs/fitness-center-1.jpeg" alt="Fitness Center">
-          <div class="card-body">
-            <h3 class="card-title">Fitness Center</h5>
-              <p class="card-text">Enjoy a workout in a fully-equipped fitness center, with a view of the pool.</p>
-          </div>
-        </div>
-
-        <div class="card border-info mb-3">
-          <img class="card-img-top" src="img/amenities-imgs/pool-1.jpeg" alt="Pool">
-          <div class="card-body">
-            <h3 class="card-title">Pool and Spa</h3>
-            <p class="card-text">Take a swim or relax in the jacuzzi.</p>
-          </div>
-        </div>
-
-        <div class="card border-info mb-3">
-          <img class="card-img-top" src="img/amenities-imgs/courtyard-1.jpeg" alt="Courtyard">
-          <div class="card-body">
-            <h3 class="card-title">Courtyard</h3>
-            <p class="card-text">Take a walk in the beautiful courtyard.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <h4>Other Amenities</h4>
-    <ul class="list-group border-info mb-3">
-      <li class="list-group-item">Washer/Dryer</li>
-      <li class="list-group-item">TV in all rooms</li>
-      <li class="list-group-item">Air conditioning</li>
-      <li class="list-group-item">Wifi</li>
-      <li class="list-group-item">BBQ grill</li>
-      <li class="list-group-item">Smart lock</li>
-      <li class="list-group-item">Free garage parking on premises</li>
-      <li class="list-group-item">Smoke/carbon monoxide alarm</li>
-    </ul>
-  </div>
-
-  <h2 id="floorplan">Floorplan</h2>
-
-  <div class="container">
-    <h2 id="map">Map</h2>
     <div class="row row-content">
       <div class="col-12">
-        <div class="mapouter">
-          <div class="embed-responsive embed-responsive-16by9 gmap_canvas"><iframe class="embed-responsive-item"
-              id="gmap_canvas"
-              src="https://maps.google.com/maps?q=Chapman%20Commons&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
-              scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://fmovies-online.net"></a><br>
-            <a href="https://www.embedgooglemap.net">embedgooglemap.net</a>
+        <h2>Contact Us</h2>
+        <hr />
+      </div>
+      <div class="col-md-12">
+        <form>
+          <div class="form-group row">
+            <label class="col-md-2" for="firstName">First Name</label>
+            <div class="col-md-8">
+              <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name" />
+            </div>
           </div>
-        </div>
+          <div class="form-group row">
+            <label class="col-md-2" for="lastName">Last Name</label>
+            <div class="col-md-8">
+              <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name" />
+            </div>
+          </div>
+          <div class="form-group row">
+            <label class="col-md-2" for="telNum">Telephone</label>
+            <div class="col-md-8">
+              <input id="telNum" type="tel" class="form-control" name="telNum" placeholder="Tel. number" />
+            </div>
+          </div>
+          <div class="form-group row">
+            <label class="col-md-2" for="email">Email</label>
+            <div class="col-md-8">
+              <input type="email" class="form-control" id="email" name="email" placeholder="Email" />
+            </div>
+          </div>
+          <div class="form-group row">
+            <label class="col-md-2" for="numGuests">Guests</label>
+            <div class="col-md-4">
+              <select class="form-control" id="numGuests">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+                <option>6</option>
+                <option>7</option>
+                <option>8</option>
+              </select>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label class="col-md-2" for="date-of-arrival">Date of Arrival</label>
+            <div class="col-md-3">
+              <input id="date-of-arrival" type="date">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label class="col-md-2" for="date-of-checkout">Date of Checkout</label>
+            <div class="col-md-3">
+              <input id="date-of-checkout" type="date">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="comments" class="col-md-2"> Comments or Questions</label>
+            <div class="col-md-8">
+              <textarea class="form-control" name="comments" id="comments" cols="30" rows="8"></textarea>
+            </div>
+          </div>
+          <div class="form-group row">
+            <div class="offset-md-2 col-md-10">
+              <button type="submit" class="btn btn-info">Submit</button>
+            </div>
+          </div>
+        </form>
       </div>
     </div>
   </div>
+
+
   <footer class="site-footer">
     <div class="container">
       <div class="row">
@@ -157,6 +161,7 @@
       </div>
     </div>
   </footer>
+
   <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
   <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
