Added floorplan, calendar, and rates card

--- a/overview.html
+++ b/overview.html
@@ -109,8 +109,14 @@
       </ul>
     </div>
 
-    <h2 id="floorplan">Floorplan</h2>
-
+    <div class="container">
+      <h2 id="floorplan">Floorplan</h2>
+      <div class="row row-content">
+        <div class="col text-center">
+          <img src="img/condo-imgs/floorplan.png" class="floorplan img-fluid" alt="Floorplan">
+        </div>
+      </div>
+    </div>
     <div class="container">
       <h2 id="map">Map</h2>
       <div class="row row-content">
