--- a/availability.html
+++ b/availability.html
@@ -52,7 +52,37 @@
       </div>
     </div>
   </nav>
+  <header>
+    <h1>Availability and Rates</h1>
+  </header>
+  <div class="container">
+    <div class="row row-content">
+      <div class="col-lg-9 col-sm-12 text-center embed-responsive embed-responsive-16by9">
+        <iframe
+          src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FNew_York&src=MTAydXFuczlhbGFibnJncGw3aHFldmEyZ3NAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%237986CB&color=%237986CB"
+          class="calendar embed-responsive-item" style="border:solid 1px #777" width="800" height="600" frameborder="0"
+          scrolling="no"></iframe>
+      </div>
+      <div class="col-lg-3 col-sm-12 mt-sm-3">
+        <div class="card">
+          <div class="card-header">
+            <h2>Rates</h2>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Week Days (Monday through Thursday)</h5>
+            <p class="card-text">$169 per night</p>
+            <h5 class="card-title">Weekends (Friday through Sunday)</h5>
+            <p class="card-text">$199 per night</p>
+            <h5 class="card-title">Summer and Holidays (May through August; December)</h5>
+            <p class="card-text">$219 per night</p>
+            <a href="#" class="btn btn-info">Book Now</a>
+          </div>
+        </div>
 
+
+      </div>
+    </div>
+  </div>
 
   <footer class="site-footer">
     <div class="container">
