--- a/things-to-do.html
+++ b/things-to-do.html
@@ -52,6 +52,157 @@
     </div>
   </nav>
 
+  <ul class="nav nav-pills sticky-top bg-light mb-3" id="pills-tab" role="tablist">
+    <li class="nav-item">
+      <a class="nav-link text-info" href="#places" aria-selected="true">Places to Visit</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-info" href="#restaurants" aria-selected="false">Restaurants</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-info" href="#events" aria-selected="false">Upcoming Events</a>
+    </li>
+  </ul>
+
+  <div class="container">
+    <h1>Things to Do</h1>
+    <div class="row row-content text-center">
+      <div class="col-md-8 offset-md-2">
+        <div id="thingsToDoCarousel" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100 img-fluid" src="img/places-imgs/disneyland.jpg" alt="Disneyland">
+              <div class="carousel-caption d-none d-md-block rounded-circle">
+                <h5>Disneyland</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100 img-fluid" src="img/places-imgs/Huntington-beach.JPEG" alt="Huntington Beach">
+              <div class="carousel-caption d-none d-md-block rounded-circle">
+                <h5>Huntington Beach</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100 img-fluid" src="img/places-imgs/knotts.JPG" alt="Knotts Berry Farm">
+              <div class="carousel-caption d-none d-md-block rounded-circle">
+                <h5>Knotts Berry Farm</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100 img-fluid" src="img/places-imgs/angel-stadium.JPG" alt="Angels Stadium">
+              <div class="carousel-caption d-none d-md-block rounded-circle">
+                <h5>Angel Stadium</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100 img-fluid" src="img/places-imgs/balboa-island.JPG" alt="Balboa Island">
+              <div class="carousel-caption d-none d-md-block rounded-circle">
+                <h5>Balboa Island</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100 img-fluid" src="img/places-imgs/irvine-spectrum.jpg" alt="Irvine Spectrum">
+              <div class="carousel-caption d-none d-md-block rounded-circle">
+                <h5>Irvine Spectrum</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100 img-fluid" src="img/places-imgs/newport-beach.JPEG" alt="Newport Beach">
+              <div class="carousel-caption d-none d-md-block rounded-circle">
+                <h5>Newport Beach</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100 img-fluid" src="img/places-imgs/packing-house.JPG" alt="Packing House">
+              <div class="carousel-caption d-none d-md-block rounded-circle">
+                <h5>Anaheim Packing House</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100 img-fluid" src="img/places-imgs/Hollywood.jpg" alt="Hollywood">
+              <div class="carousel-caption d-none d-md-block rounded-circle">
+                <h5>Hollywood</h5>
+              </div>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#thingsToDoCarousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#thingsToDoCarousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="row row-content mt-5">
+      <div class="col col-sm-8 offset-sm-2">
+        <h4 class="text-center" id="places">Places to Visit</h4>
+        <ul class="list-group border-info mb-3">
+          <li class="list-group-item">Disneyland, Disney California Adventure, Downtown Disney: 1.8 mile away</li>
+          <li class="list-group-item">Great Wolf Lodge: 0.8 mile away</li>
+          <li class="list-group-item">Anaheim Convention Center: 1.2 mile away</li>
+          <li class="list-group-item">Anaheim GardenWalk: 1.7 mile away</li>
+          <li class="list-group-item">The Outlets at Orange: 2 miles away</li>
+          <li class="list-group-item">Discovery Cube Orange County: 3.8 miles away</li>
+          <li class="list-group-item">Honda Center: 3.8 miles away</li>
+          <li class="list-group-item">Muzeo: 3.8 miles away</li>
+          <li class="list-group-item">Irvine Spectrum: 15 miles away</li>
+          <li class="list-group-item">Newport Beach: 17 miles away</li>
+          <li class="list-group-item">Huntington Beach: 15 miles away</li>
+          <li class="list-group-item">Laguna Beach: 23 miles away</li>
+          <li class="list-group-item">Los Angeles: 30 miles away</li>
+          <li class="list-group-item">San Diego: 93 miles away</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="row row-content mt-3">
+      <div class="col col-sm-8 offset-sm-2">
+        <h4 class="text-center" id="restaurants">Restaurants</h4>
+        <ul class="list-group border-info mb-3">
+          <li class="list-group-item">Bruxie</li>
+          <li class="list-group-item">Roscoe's Chicken and Waffles</li>
+          <li class="list-group-item">Sabroso! Mexican Grill</li>
+          <li class="list-group-item">Pho Ha Plus</li>
+          <li class="list-group-item">The Vox Kitchen</li>
+          <li class="list-group-item">Nova Kitchen & Bar</li>
+          <li class="list-group-item">Craft By Smoke And Fire</li>
+          <li class="list-group-item">And so many more...</li>
+        </ul>
+      </div>
+    </div>
+
+
+    <div class="row row-content mt-3">
+      <div class="col col-sm-8 offset-sm-2">
+        <h4 class="text-center" id="events">Upcoming Events in Orange County</h4>
+        <ul class="list-group border-info mb-3">
+          <li class="list-group-item"><a href="https://www.thephoenixclub.com/">BockbierFest</a>: The Phoenix Club,
+            Saturday, March 26, 2022</li>
+          <li class="list-group-item"><a href="https://www.lagunabeachlive.org/musicfestival">Laguna Beach Music
+              Festival</a>: Laguna Beach, March 28th to April 3, 2022</li>
+          <li class="list-group-item"><a href="https://www.farmakisfarms.com/">Farmakis Farms Craft Market</a>: San Juan
+            Capistrano,
+            Saturday, April 2, 2022</li>
+          <li class="list-group-item"><a href="https://www.pretendcity.org/events/kidstock/">Kidstock Family Music
+              and Arts Festival</a>: Irvine,
+            April 4-15, 2022</li>
+          <li class="list-group-item"><a
+              href="https://mssociety.donordrive.com/index.cfm?fuseaction=donorDrive.event&eventID=935">Walk MS</a>:
+            Irvine,
+            Sunday, April 10, 2022</li>
+          <li class="list-group-item"><a href="https://www.orangecounty.net/html/earthday.html">Earth Day Events and
+              Activities
+            </a>: Various Locations, April, May</li>
+          <li class="list-group-item">Many more upcoming events can be found <a
+              href="https://www.orangecounty.net/html/events.html">here
+            </a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
   <footer class="site-footer">
     <div class="container">
@@ -77,6 +228,7 @@
           &copy;2022 JM Developments
         </div>
       </div>
+    </div>
     </div>
   </footer>
 
