Added box shadow and modified margins/padding

--- a/things-to-do.html
+++ b/things-to-do.html
@@ -136,9 +136,9 @@
         </div>
       </div>
     </div>
-    <div class="row row-content mt-5">
+    <div class="row row-content">
       <div class="col col-sm-8 offset-sm-2">
-        <h4 class="text-center" id="places">Places to Visit</h4>
+        <h4 class="text-center pt-5" id="places">Places to Visit</h4>
         <ul class="list-group border-info mb-3">
           <li class="list-group-item">Disneyland, Disney California Adventure, Downtown Disney: 1.8 mile away</li>
           <li class="list-group-item">Great Wolf Lodge: 0.8 mile away</li>
@@ -158,9 +158,9 @@
       </div>
     </div>
 
-    <div class="row row-content mt-3">
+    <div class="row row-content">
       <div class="col col-sm-8 offset-sm-2">
-        <h4 class="text-center" id="restaurants">Restaurants</h4>
+        <h4 class="text-center pt-5" id="restaurants">Restaurants</h4>
         <ul class="list-group border-info mb-3">
           <li class="list-group-item">Bruxie</li>
           <li class="list-group-item">Roscoe's Chicken and Waffles</li>
@@ -175,9 +175,9 @@
     </div>
 
 
-    <div class="row row-content mt-3">
+    <div class="row row-content">
       <div class="col col-sm-8 offset-sm-2">
-        <h4 class="text-center" id="events">Upcoming Events in Orange County</h4>
+        <h4 class="text-center pt-5" id="events">Upcoming Events in Orange County</h4>
         <ul class="list-group border-info mb-3">
           <li class="list-group-item"><a href="https://www.thephoenixclub.com/">BockbierFest</a>: The Phoenix Club,
             Saturday, March 26, 2022</li>
