--- a/overview.html
+++ b/overview.html
@@ -29,10 +29,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="index.html">Home</a>
             </li>
-            <li class="nav-item ">
+            <li class="nav-item active">
               <a class="nav-link" href="#">Overview</a>
             </li>
             <li class="nav-item">
@@ -68,10 +68,10 @@
     </ul>
 
     <div class="container">
-      <h2 id="amenities">Amenities</h2>
+      <h2 class="pt-5" id="amenities">Amenities</h2>
       <div class="row row-content">
-        <div class="card-group">
-          <div class="card border-info mb-3">
+        <div class="card-deck">
+          <div class="card border mb-3">
             <img class="card-img-top" src="img/amenities-imgs/fitness-center-1.jpeg" alt="Fitness Center">
             <div class="card-body">
               <h3 class="card-title">Fitness Center</h5>
@@ -79,7 +79,7 @@
             </div>
           </div>
 
-          <div class="card border-info mb-3">
+          <div class="card border mb-3">
             <img class="card-img-top" src="img/amenities-imgs/pool-1.jpeg" alt="Pool">
             <div class="card-body">
               <h3 class="card-title">Pool and Spa</h3>
@@ -87,7 +87,7 @@
             </div>
           </div>
 
-          <div class="card border-info mb-3">
+          <div class="card border mb-3">
             <img class="card-img-top" src="img/amenities-imgs/courtyard-1.jpeg" alt="Courtyard">
             <div class="card-body">
               <h3 class="card-title">Courtyard</h3>
@@ -96,21 +96,25 @@
           </div>
         </div>
       </div>
-      <h4>Other Amenities</h4>
-      <ul class="list-group border-info mb-3">
-        <li class="list-group-item">Washer/Dryer</li>
-        <li class="list-group-item">TV in all rooms</li>
-        <li class="list-group-item">Air conditioning</li>
-        <li class="list-group-item">Wifi</li>
-        <li class="list-group-item">BBQ grill</li>
-        <li class="list-group-item">Smart lock</li>
-        <li class="list-group-item">Free garage parking on premises</li>
-        <li class="list-group-item">Smoke/carbon monoxide alarm</li>
-      </ul>
+      <div class="row row-content mt-3">
+        <div class="col col-sm-10 offset-sm-1">
+          <h4 class="mt-3 text-center pt-5">Other Amenities</h4>
+          <ul class="list-group border-info mb-3">
+            <li class="list-group-item">Washer/Dryer</li>
+            <li class="list-group-item">TV in all rooms</li>
+            <li class="list-group-item">Air conditioning</li>
+            <li class="list-group-item">Wifi</li>
+            <li class="list-group-item">BBQ grill</li>
+            <li class="list-group-item">Smart lock</li>
+            <li class="list-group-item">Free garage parking on premises</li>
+            <li class="list-group-item">Smoke/carbon monoxide alarm</li>
+          </ul>
+        </div>
+      </div>
     </div>
 
     <div class="container">
-      <h2 id="floorplan">Floorplan</h2>
+      <h2 class="pt-5" id="floorplan">Floorplan</h2>
       <div class="row row-content">
         <div class="col text-center">
           <img src="img/condo-imgs/floorplan.png" class="floorplan img-fluid" alt="Floorplan">
@@ -118,9 +122,9 @@
       </div>
     </div>
     <div class="container">
-      <h2 id="map">Map</h2>
+      <h2 class="pt-5" id="map">Map</h2>
       <div class="row row-content">
-        <div class="col-12">
+        <div class="col col-lg-10 offset-lg-1">
           <div class="mapouter">
             <div class="embed-responsive embed-responsive-16by9 gmap_canvas"><iframe class="embed-responsive-item"
                 id="gmap_canvas"
