--- a/gallery.html
+++ b/gallery.html
@@ -59,12 +59,199 @@
       <h1>Photo Gallery</h1>
     </div>
   </header>
+  <div class="container">
+    <div class="row">
+      <div class="col text-center mt-2 mb-2">
+        <button class="btn btn-info" href="#galleryModal" id="galleryButton" data-toggle="modal"
+          data-target="#galleryModal">View Images in Slide Show</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-fluid">
+    <div id="galleryModal" class="modal fade" role="dialog">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
+          <div id="galleryCarousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100 img-fluid" src="img/condo-imgs/adventure.jpg" alt="Adventure is Calling">
+                <div class="carousel-caption d-none d-md-block rounded-circle">
+                  <h5>Adventure is Calling</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid" src="img/condo-imgs/living-room.jpg" alt="Living Room">
+                <div class="carousel-caption d-none d-md-block rounded-circle">
+                  <h5>Living Room</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid" src="img/condo-imgs/Iiving-area.jpg" alt="Living Area">
+                <div class="carousel-caption d-none d-md-block rounded-circle">
+                  <h5>Living Area</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid" src="img/condo-imgs/dining-room-2.jpg"
+                  alt="Dining Room/Living Room">
+                <div class="carousel-caption d-none d-md-block rounded-circle">
+                  <h5>Dining Room/Living Room</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid" src="img/condo-imgs/dining-room.jpg" alt="Dining Room">
+                <div class="carousel-caption d-none d-md-block rounded-circle">
+                  <h5>Dining Room</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid" src="img/condo-imgs/kitchen-1.jpg" alt="Kitchen">
+                <div class="carousel-caption d-none d-md-block rounded-circle">
+                  <h5>Kitchen</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid" src="img/condo-imgs/kitchen-2.jpg"
+                  alt="Kitchen with Gas Stove/Oven">
+                <div class="carousel-caption d-none d-md-block rounded-circle">
+                  <h5>Kitchen with Gas Stove/Oven</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid" src="img/condo-imgs/hallway.jpg"
+                  alt="Hallway to Bedrooms and Bathrooms">
+                <div class="carousel-caption d-none d-md-block rounded-circle">
+                  <h5>Hallway to Bedrooms and Bathrooms</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid" src="img/condo-imgs/washer-dryer.jpg" alt="Washer and Dryer">
+                <div class="carousel-caption d-none d-md-block rounded-circle">
+                  <h5>Washer and Dryer</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid" src="img/condo-imgs/master-bedroom-1.jpg"
+                  alt="Master Bedroom with a King Bed">
+                <div class="carousel-caption d-none d-md-block rounded-circle">
+                  <h5>Master Bedroom with a King Bed</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid" src="img/condo-imgs/master-bedroom-2.jpg"
+                  alt="Master Bedroom Hallway to Closet and Bathroom">
+                <div class="carousel-caption d-none d-md-block rounded-circle">
+                  <h5>Master Bedroom Hallway to Closet and Bathroom</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid" src="img/condo-imgs/master-closet-1.jpg"
+                  alt="Walk-in Closet in Master Bedroom">
+                <div class="carousel-caption d-none d-md-block rounded-circle">
+                  <h5>Walk-in Closet in Master Bedroom</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid" src="img/condo-imgs/master-bathroom-4.jpg"
+                  alt="Full Bathroom in Master Bedroom">
+                <div class="carousel-caption d-none d-md-block rounded-circle">
+                  <h5>Full Bathroom in Master Bedroom</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid" src="img/condo-imgs/master-bathroom-2.jpg"
+                  alt="Full Bathroom in Master Bedroom">
+                <div class="carousel-caption d-none d-md-block rounded-circle">
+                  <h5>Full Bathroom in Master Bedroom</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid" src="img/condo-imgs/master-bathtub.jpg"
+                  alt="Full bathroom in Master Bedroom">
+                <div class="carousel-caption d-none d-md-block rounded-circle">
+                  <h5>Full Bathroom in Master Bedroom</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid" src="img/condo-imgs/second-bedroom-4.jpg" alt="Second Bedroom">
+                <div class="carousel-caption d-none d-md-block rounded-circle">
+                  <h5>Second Bedroom</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid" src="img/condo-imgs/second-bedroom-3.jpg"
+                  alt="Second Bedroom with a Full Bed and Twin Trundle">
+                <div class="carousel-caption d-none d-md-block rounded-circle">
+                  <h5>Second Bedroom with a Full Bed and Twin Trundle</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid" src="img/condo-imgs/second-bedroom-2.jpg"
+                  alt="Closet in Second Bedroom">
+                <div class="carousel-caption d-none d-md-block rounded-circle">
+                  <h5>Closet in Second Bedroom</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid" src="img/condo-imgs/second-bathroom-2.jpg" alt="Second Bathroom">
+                <div class="carousel-caption d-none d-md-block rounded-circle">
+                  <h5>Second Bathroom</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid" src="img/condo-imgs/second-bathroom-1.jpg"
+                  alt="Second Full Bathroom">
+                <div class="carousel-caption d-none d-md-block rounded-circle">
+                  <h5>Second Full Bathroom</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid" src="img/condo-imgs/balcony-1.jpg" alt="Balcony">
+                <div class="carousel-caption d-none d-md-block rounded-circle">
+                  <h5>Balcony</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid" src="img/amenities-imgs/pool-1.jpeg" alt="Pool/Spa">
+                <div class="carousel-caption d-none d-md-block rounded-circle">
+                  <h5>Pool/Spa</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid" src="img/amenities-imgs/fitness-center-1.jpeg"
+                  alt="Fitness Center">
+                <div class="carousel-caption d-none d-md-block rounded-circle">
+                  <h5>Fitness Center</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid" src="img/amenities-imgs/courtyard-1.jpeg" alt="Courtyard">
+                <div class="carousel-caption d-none d-md-block rounded-circle">
+                  <h5>Courtyard</h5>
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#galleryCarousel" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#galleryCarousel" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <div id="gallery" class="container">
     <div class="row row-content">
       <div class="card-deck mt-sm-4">
         <div class="card mx-3">
-          <img class="card-img-top" src="img/condo-imgs/adventure.jpg" alt="Adventure is calling.">
+          <img class="card-img-top" src="img/condo-imgs/adventure.jpg" alt="Adventure is calling."></a>
           <div class="card-body">
             <h5 class="card-title text-center">Adventure is Calling</h5>
           </div>
@@ -104,6 +291,7 @@
             <h5 class="card-title text-center">Kitchen</h5>
           </div>
         </div>
+        </a>
       </div>
     </div>
 
@@ -279,7 +467,6 @@
   <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
   <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
 </body>
 
 </html>
