Updated spacing/margins and removed youtube icon

--- a/availability.html
+++ b/availability.html
@@ -27,7 +27,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
@@ -62,7 +62,7 @@
           src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FNew_York&src=MTAydXFuczlhbGFibnJncGw3aHFldmEyZ3NAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%237986CB&color=%237986CB"
           class="calendar embed-responsive-item" width="800" height="600" frameborder="0" scrolling="no"></iframe>
       </div>
-      <div class="col-lg-3 col-sm-12 mt-sm-3">
+      <div class="col-lg-3 col-sm-12 mt-3">
         <div class="card">
           <div class="card-header">
             <h2>Rates</h2>
@@ -176,7 +176,6 @@
           <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
           <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
           <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-          <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
         </div>
       </div>
       <div class="row">
