--- a/index.html
+++ b/index.html
@@ -72,10 +72,12 @@
     <h2>Enjoy the California sun</h2>
     <p>OC Vacation Home is located in Garden Grove, California. Enjoy great sunset
       views from your window and a view of
-      Disneyland fireworks from the balcony. The space includes 2 bedrooms and 2 bathrooms. The property has luxury
+      Disneyland fireworks from the balcony. </p>
+    <p>The space includes 2 bedrooms and 2 bathrooms. The property has luxury
       vinyl plank laminated wood flooring, complemented with soft blue wall colors and linen white ceiling and
       baseboards. The kitchen was upgraded to include a Farmhouse single basin sink, gleaming quartz countertops and
-      stainless steel appliances. You will also be able to enjoy the community amenities of a clubhouse,
+      stainless steel appliances. </p>
+    <p>You will also be able to enjoy the community amenities of a clubhouse,
       fully-equipped
       fitness center, pool, spa, and barbecue areas.</p>
   </div>
@@ -86,7 +88,6 @@
           <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
           <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
           <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-          <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
         </div>
       </div>
       <div class="row">
