--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
           <div class="form-group row">
             <label class="col-md-2" for="telNum">Telephone</label>
             <div class="col-md-8">
-              <input id="telNum" type="tel" class="form-control" name="telNum" placeholder="Tel. number" />
+              <input id="telNum" type="tel" class="form-control" name="telNum" placeholder="Telephone" />
             </div>
           </div>
           <div class="form-group row">
@@ -136,7 +136,6 @@
           <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
           <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
           <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-          <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
         </div>
       </div>
       <div class="row">
