--- a/overview.html
+++ b/overview.html
@@ -96,9 +96,9 @@
           </div>
         </div>
       </div>
-      <div class="row row-content mt-3">
+      <div class="row row-content">
         <div class="col col-sm-10 offset-sm-1">
-          <h4 class="mt-3 text-center pt-5">Other Amenities</h4>
+          <h4 class="text-center pt-5">Other Amenities</h4>
           <ul class="list-group border-info mb-3">
             <li class="list-group-item">Washer/Dryer</li>
             <li class="list-group-item">TV in all rooms</li>
@@ -145,7 +145,6 @@
                 class="fa fa-instagram"></i></a>
             <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
             <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-            <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
           </div>
         </div>
         <div class="row">
